Małe poprawki i dodanie kilku rzeczy

--- a/PS4/PS4/MainWindow.xaml
+++ b/PS4/PS4/MainWindow.xaml
@@ -49,7 +49,7 @@
                 </StackPanel>
                 <DockPanel LastChildFill="True">
                     <Label Content="Szyfr strumieniowy" Margin="5" Padding="5"/>
-                    <TextBox MinWidth="150px"  Margin="5" Padding="5" IsEnabled="false" Name="streamResult" Text="Wynik"/>
+                    <TextBox MinWidth="150px"  Margin="5" Padding="5" IsEnabled="false" Name="cipherResult" Text="Wynik"/>
                 </DockPanel>
             </StackPanel>
         </GroupBox>
