Dodanie kolejnych rzeczy

--- a/PS4/PS4/MainWindow.xaml
+++ b/PS4/PS4/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PS4"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" SizeToContent="WidthAndHeight">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="AUTO"/>
@@ -15,11 +15,11 @@
         <GroupBox Grid.Row="0" Header="Generator liczb pseudolosowych bazujący na metodzie LFSR" Margin="5" Padding="5">
             <StackPanel>
                 <DockPanel LastChildFill="True">
-                    <Label Content="Seed " Margin="5" Padding="5"/>
+                    <Label Content="Powtórzenia " Margin="5" Padding="5"/>
                     <TextBox MinWidth="150px"  Margin="5" Padding="5" Name="seedLFSR" Text="..."/>
                 </DockPanel>
                 <DockPanel LastChildFill="True">
-                    <Label Content="Taps " Margin="5, 5, 7, 5" Padding="5"/>
+                    <Label Content="Wielomian   " Margin="5, 5, 7, 5" Padding="5"/>
                     <TextBox MinWidth="150.5px"  Margin="5" Padding="5" Name="tapsLFSR" Text="..."/>
                 </DockPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
@@ -39,7 +39,7 @@
                     <TextBox MinWidth="150px"  Margin="5" Padding="5" Name="bitString" Text="..."/>
                 </DockPanel>
                 <DockPanel LastChildFill="True">
-                    <Label Content="Generator (Seed/Taps)" Margin="5" Padding="5"/>
+                    <Label Content="Powtórzenia/Wielomian" Margin="5" Padding="5"/>
                     <TextBox MinWidth="100px"  Margin="5" Padding="5" ToolTip="Seed" Name="streamSeed" Text="..."/>
                     <TextBox MinWidth="100px"  Margin="5" Padding="5" ToolTip="Taps" Name="streamTaps" Text="..."/>
                 </DockPanel>
